# rs-fevm-utils

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
src/: executor.rs  lib.rs  main.rs  multisig_utils.rs
test_files/: PrecompilesApiTest.json
