[package]
name = "fevm-utils"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
thiserror = "1.0.38"
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, rev = 'ee5e3e52', features = ["abigen", "ledger"]  }
tokio = { version = "1.17.0", features = ["macros"] }
serde_json = "1.0.91"
serde = "1.0.152"
log = { version = "0.4.17" }
colog = { version = "1.1.0" }
base32 = "0.4.0"
leb128 = "0.2.5"
blake2 = "0.10.6"
reqwest = "0.11.14"
async-recursion = "1.0.2"
hex = "0.4.3"
cid = "0.8.6"
prettytable-rs = "0.10"
serde_cbor = "0.11.2"

# filecoin
fil_actors_runtime = { git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
fil_actor_eam = { git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0" }
fil_actor_datacap = {  git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0"  }
fil_actor_init = { git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0"  }
fil_actor_miner = {  git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0"  }
fil_actor_evm = { git = "https://github.com/filecoin-project/builtin-actors", tag = "v10.0.0"  }

# FVM 
fvm_ipld_blockstore = { version = "0.1.1" }
fvm_shared = { version = "3.0.0-alpha.17" }
fvm = { version = "3.0.0-alpha.21" }
fvm_ipld_encoding = { version = "0.3.3" }
fvm_integration_tests = { version = "3.0.0-alpha.1" }

[build-dependencies]
copy_to_output = "2.0.0"
glob = "0.3"

